Wed Jul 25 23:15:24 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc, htsearch/htsearch.cc, htdoc/attrs.html,
	htdoc/cf_by{name,prog}.html: Added new attribute boolean_keywords
	and used it to make LOGICAL_WORDS and parse "words" using boolean
	method.

Wed Jul 25 22:31:19 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/Dictionary.cc (Remove): Fixed so it doesn't clobber rest of
	chain when removing an entry, as suggested by Yariv Tal.

Wed Jul 25 22:06:08 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc: Add new attributes htnotify_replyto,
	htnotify_webmaster, htnotify_prefix_file, htnotify_suffix_file.

	* htdoc/attrs.html, cf_by{name,prog}.html: Document them.

	* htnotify/htnotify.cc, htnotify/EmailNotification.{h,cc},
	htnotify/Makefile.in: Added in code from Richard Beton
	<richard.beton@roke.co.uk> to collect multiple URLs per e-mail
	address and allow customization of notification messages by
	reading in header/footer text as designated by the new attributes
	above.

	* htdoc/THANKS.html: Credit where due.

Wed Jul 25 21:38:21 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc: Added .css to bad_extensions, for consistency
	with 3.2.

	* htdoc/attrs.html: Ditto for default value. Also set examples for
	translate_* and modification_time_is_now to false so the example is
	different that default.

Wed Jul 25 17:26:07 2001  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Document.cc (getParsable): Add conditional to catch
	text/css files to prevent these from being parsed as Plaintext.

	* htdig/htdig.cc: Quick fix to make the logging -l flag the
	default behavior. (Set to Retriever_logUrl from the start.)

	* htcommon/defaults.cc: Set modification_time_is_now to default to
	true (now that it works correctly). Also set translate_*
	attributes to true.

	* htdoc/htdig.html: Remove documentation for -l flag--now no
	longer used.
